checking removing css element fixes scrolling on safari, fixed up workflow I broke and addded some spaces I missed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,7 +7,7 @@ body {
 }
 #terminal {
   height: 100vh;
-  overflow-y:auto;
+  /* overflow-y:auto; */
   padding-bottom: 0;
 }
 /* glow */
